--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -1,3 +1,13 @@
+- local: informer
+  title: "使用 Informer 进行多元概率时间序列预测" 
+  author: elisim
+  thumbnail: /blog/assets/134_informer/thumbnail.png
+  date: March 10, 2023
+  tags:
+    - guide
+    - research
+    - time-series
+
 - local: large-language-models
   title: "大语言模型：新的摩尔定律？"
   author: juliensimon
