--- a/_events.yml
+++ b/_events.yml
@@ -2,6 +2,11 @@
 # "date_formatted" attribute is optional if you want to control the format/look of "date" on hf.co
 #                                             (e.g. specifying event date range like Jan 24 to Feb 7, 2022)
 
+- name: Diffusers/JAX Community Sprint
+  link: https://github.com/huggingface/community-events/tree/main/jax-controlnet-sprint
+  date: Mar 29 to May 8, 2023
+  description: This is a community event to develop applications with 🧨 diffusers and JAX using TPUs.
+
 - name: (IRL San Francisco) Open Source AI meetup with 🤗 CEO
   link: https://partiful.com/e/fE0XH0PrSOZB9ezYuFbW
   date: Mar 31, 2023
