--- a/zh/_blog.yml
+++ b/zh/_blog.yml
@@ -278,3 +278,37 @@
   date: March 3, 2023
   tags:
     - diffusers
+
+- local: bloom-inference-optimization
+  title: "优化故事: BLOOM 模型推理"
+  author: Narsil
+  thumbnail: /blog/assets/bloom-inference-pytorch-scripts/thumbnail.png
+  date: Oct 12, 2022
+  tags:
+    - open-source-collab
+    - community
+    - research
+
+- local: stable-diffusion-inference-intel
+  title: "在英特尔 CPU 上加速 Stable Diffusion 推理"
+  author: juliensimon
+  thumbnail: /blog/assets/136_stable_diffusion_inference_intel/01.png
+  date: March 28, 2023
+  tags:
+    - hardware
+    - intel
+    - guide
+
+- local: habana-gaudi-2-bloom
+  title: "大语言模型快速推理：在 Habana Gaudi2 上推理 BLOOMZ"
+  author: regisss
+  thumbnail: /blog/assets/habana-gaudi-2-bloom/thumbnail.png
+  date: March 28, 2023
+  tags:
+    - habana
+    - partnerships
+    - hardware
+    - nlp
+    - llm
+    - bloom
+    - inference
